# claude-plugins

./: CLAUDE.md
.claude/: memory.db
.fork-join/: current_session  session-1768981182.json  session-1769106578.json  session-1769109247.json  session-1769112119.json  session-1769112714.json  session-1769143890.json  session-1769146910.json  tracked_files.txt
plugins/.claude-plugin/: marketplace.json
plugins/agent-fork-join/: CLAUDE.md  README.md  SKILL.md  plugin.json
plugins/agent-fork-join/.claude-plugin/: plugin.json
plugins/agent-fork-join/commands/: done.md
plugins/agent-fork-join/daemon/: Cargo.toml
plugins/agent-fork-join/daemon/src/: config.rs  error.rs  ipc.rs  main.rs  merger.rs  queue.rs  state.rs
plugins/agent-fork-join/docs/: ARCHITECTURE.md  COMMIT_GUIDELINES.md
plugins/agent-fork-join/hooks/: on-agent-complete.sh  on-agent-spawn.sh  on-prompt-submit.sh  on-session-complete.sh  on-tool-complete.sh
plugins/agent-fork-join/hooks/lib/: cache.sh  common.sh  daemon-client.sh  git-utils.sh
plugins/agent-fork-join/scripts/: create-pr.sh  done.sh  generate-branch-name.sh  generate-commit-message.sh  generate-pr-summary.sh  llm-enhance.sh  request-reviews.sh  run-validation.sh
plugins/jira/: CLAUDE.md
plugins/jira-onboarding/: CLAUDE.md  SKILL.md
plugins/jira-onboarding/commands/: jira-setup.md
plugins/jira-onboarding/scripts/: setup-jira.sh
plugins/jira/.claude-plugin/: plugin.json
plugins/jira/commands/: setup.md
plugins/jira/scripts/: setup-jira.sh
tests/agent-fork-join/: README.md  cleanup.sh  e2e-test.sh
