[package]
name = "merge-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Claude Plugins"]
description = "FIFO merge queue daemon for multi-agent git workflows"
license = "MIT"
repository = "https://github.com/claude-plugins/agent-fork-join"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# Git operations
git2 = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database for persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI args (for daemon configuration)
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[[bin]]
name = "merge-daemon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
